tests/paczka1/small_fuzzy/83568147.err
Error in line 3: Q2r A276 0,8
Error in line 5: QwI A276 37,6
